# batch_speech_text

./: .env.sample  .gitignore  app.py  pyproject.toml  readme.md
src/: app.py
