[tool.poetry]
name = "text-speech"
version = "0.1.0"
description = ""
authors = ["kaw393939 <kwilliam@njit.edu>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^8.3.4"
openai = "^1.55.3"
python-dotenv = "^1.0.1"
ffmpeg = "^1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
